--- a/content/posts/wsl2.adoc
+++ b/content/posts/wsl2.adoc
@@ -67,8 +67,8 @@ kernelCommandLine = vsyscall=emulate
 
 . Edit Settings
 +
-[source,json]
-.profile.json
+[source,javascript]
+.`profile.json`
 ----
 // To view the default settings, hold "alt" while clicking on the "Settings" button.
 // For documentation on these settings, see: https://aka.ms/terminal-documentation
